fix next vulnerabilities and add  invitate sell
